# raft-python

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
raft/: 52814.echion  52901.echion  config.py  run_rpc_client.py  run_rpc_server.py  run_rpc_test.py
raft/kv/: actor.py
raft/network/: inbound_rpc.py  message_utils.py  outbound_rpc.py
raft/node/: actor.py  commands.py  log.py  persisted_state.py
scratch/: container.py  main.py
scratch/actors/: keyval.py  network_command.py  node.py
scratch/network/: command_receiver.py  command_repl.py  socket_message_utils.py
scratch/traffic/: controller.py  main.py
scratch/warmup/: messages.py  socket_client.py  socket_server.py
tests/network/: test_inbound_rpc.py  test_outbound_rpc.py
tests/node/: test_e2e_append.py  test_e2e_vote.py  test_log.py  test_persisted_state.py
