[tool.poetry]
name = "raft"
description = "Raft in Pyython"
version = "0.0.0"
license = "MIT"
authors = [
    "Josh Broomberg <joshbroomberg@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python="^3.11"
pykka = "^4.0.2"
dependency-injector = "^4.41.0"
orjson = "^3.10.3"
pytest = "^8.2.0"
echion = "^0.3.0"
pydantic = "^2.7.1"


[tool.poetry.group.test.dependencies]
pytest = "*"

[tool.poetry.scripts]
server = 'raft.run_rpc_server:run'
repl = 'raft.network.repl:run'
traffic = 'raft.traffic.main:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
